<resources>
    <string name="app_name">AwesomeCalc</string>


    <!-- Numbers -->
    <string name="nine">9</string>
    <string name="eight">8</string>
    <string name="seven">7</string>
    <string name="six">6</string>
    <string name="five">5</string>
    <string name="four">4</string>
    <string name="three">3</string>
    <string name="two">2</string>
    <string name="one">1</string>
    <string name="zero">0</string>

    <!-- actions -->
    <string name="divide">/</string>
    <string name="multiply">*</string>
    <string name="subtract">-</string>
    <string name="add">+</string>
    <string name="equals">=</string>

    <!-- extras -->
    <string name="clear">Clear</string>
    <string name="dot">.</string>
    <string name="save">Save</string>
    <string name="load">Load</string>
    <string name="delete">Delete</string>

    <!-- errors -->
    <string name="dot_error">Number missing or dot already used</string>

    <!-- responses -->
    <string name="saving">Saving...</string>
    <string name="saved">Saved</string>
    <string name="save_not">Not Saved</string>
    <string name="save_error">Error Saving</string>
</resources>
