<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.CalculationActivity">

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:textSize="48sp"
            android:id="@+id/textView_Input"
            android:gravity="end|center_vertical"
            android:maxLength="12"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            app:layout_constraintTop_toTopOf="parent"/>

    <LinearLayout
            android:id="@+id/layout_topButtons"
            app:layout_constraintTop_toBottomOf="@+id/textView_Input"
            app:layout_constraintBottom_toTopOf="@id/table"
            android:layout_width="match_parent" android:layout_height="wrap_content"
            android:divider="?android:attr/dividerVertical"
            android:dividerPadding="8dp"
            android:showDividers="middle">

        <Button
                android:text="@string/clear"
                android:background="?android:attr/selectableItemBackground"
                android:id="@+id/button_clear"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
                android:onClick="onClear"/>
        <Button
                android:text="@string/delete"
                android:background="?android:attr/selectableItemBackground"
                android:id="@+id/button_delete"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_marginEnd="16dp"
                android:layout_height="wrap_content" android:onClick="onDelete"/>

    </LinearLayout>

    <TableLayout
            android:id="@+id/table"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            app:layout_constraintTop_toBottomOf="@+id/layout_topButtons"
            android:stretchColumns="*"
            android:divider="?android:attr/dividerHorizontal"
            android:dividerPadding="16dp"
            android:showDividers="beginning|middle">

        <TableRow
                android:layout_height="wrap_content"
                android:divider="?android:attr/dividerVertical"
                android:dividerPadding="8dp"
                android:showDividers="middle">
            <Button
                    android:text="@string/nine"
                    android:background="?android:attr/selectableItemBackground"
                    android:id="@+id/button_9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
                    android:onClick="onNumeric"/>
            <Button
                    android:text="@string/eight"
                    android:background="?android:attr/selectableItemBackground"
                    android:id="@+id/button_8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:onClick="onNumeric"/>
            <Button
                    android:text="@string/seven"
                    android:background="?android:attr/selectableItemBackground"
                    android:id="@+id/button_7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:onClick="onNumeric"/>
            <Button
                    android:text="@string/divide"
                    android:background="?android:attr/selectableItemBackground"
                    android:id="@+id/button_div"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="16dp" android:onClick="onOperator"/>
        </TableRow>
        <TableRow
                android:layout_height="wrap_content"
                android:divider="?android:attr/dividerVertical"
                android:dividerPadding="8dp"
                android:showDividers="middle">
            <Button
                    android:text="@string/four"
                    android:background="?android:attr/selectableItemBackground"
                    android:id="@+id/button_4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
                    android:onClick="onNumeric"/>
            <Button
                    android:text="@string/five"
                    android:background="?android:attr/selectableItemBackground"
                    android:id="@+id/button_5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onNumeric"/>
            <Button
                    android:text="@string/six"
                    android:background="?android:attr/selectableItemBackground"
                    android:id="@+id/button_6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onNumeric"/>
            <Button
                    android:text="@string/multiply"
                    android:background="?android:attr/selectableItemBackground"
                    android:id="@+id/button_mul"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
                    android:onClick="onOperator"/>
        </TableRow>
        <TableRow
                android:layout_height="wrap_content"
                android:divider="?android:attr/dividerVertical"
                android:dividerPadding="8dp"
                android:showDividers="middle">
            <Button
                    android:id="@+id/button_1"
                    android:text="@string/one"
                    android:background="?android:attr/selectableItemBackground"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
                    android:onClick="onNumeric"/>
            <Button
                    android:id="@+id/button_2"
                    android:text="@string/two"
                    android:background="?android:attr/selectableItemBackground"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onNumeric"/>
            <Button
                    android:id="@+id/button_3"
                    android:text="@string/three"
                    android:background="?android:attr/selectableItemBackground"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onNumeric"/>
            <Button
                    android:id="@+id/button_sub"
                    android:text="@string/subtract"
                    android:background="?android:attr/selectableItemBackground"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
                    android:onClick="onOperator"/>
        </TableRow>
        <TableRow
                android:layout_height="wrap_content"
                android:divider="?android:attr/dividerVertical"
                android:dividerPadding="8dp"
                android:showDividers="middle">
            <Button
                    android:id="@+id/button_dot"
                    android:text="@string/dot"
                    android:background="?android:attr/selectableItemBackground"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
                    android:onClick="onDot"/>
            <Button
                    android:id="@+id/button_zero"
                    android:text="@string/zero"
                    android:background="?android:attr/selectableItemBackground"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onNumeric"/>
            <Button
                    android:id="@+id/button_equal"
                    android:text="@string/equals"
                    android:background="?android:attr/selectableItemBackground"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onEquals"/>
            <Button
                    android:id="@+id/button_add"
                    android:text="@string/add"
                    android:background="?android:attr/selectableItemBackground"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
                    android:onClick="onOperator"/>
        </TableRow>

    </TableLayout>
    <LinearLayout
            android:id="@+id/layout_save"
            app:layout_constraintTop_toBottomOf="@id/table"
            android:layout_width="match_parent" android:layout_height="wrap_content"
            android:divider="?android:attr/dividerVertical"
            android:dividerPadding="8dp"
            android:showDividers="middle">

        <Button
                android:text="@string/save"
                android:background="?android:attr/selectableItemBackground"
                android:id="@+id/button_save"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
                android:onClick="onSave"/>
        <TextView
                android:id="@+id/textView_response"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:layout_weight="3"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"/>
    </LinearLayout>
    <LinearLayout
            android:id="@+id/layout_load"
            app:layout_constraintTop_toBottomOf="@id/layout_save"
            android:layout_width="match_parent" android:layout_height="wrap_content"
            android:divider="?android:attr/dividerVertical"
            android:dividerPadding="8dp"
            android:showDividers="middle">

        <Button
                android:text="@string/load"
                android:background="?android:attr/selectableItemBackground"
                android:id="@+id/button_load"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
                android:onClick="onLoad"/>
        <TextView
                android:id="@+id/textView_load_response"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:layout_weight="3"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>